[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/level_map.gd" id="1_1"]
[ext_resource type="FontFile" uid="uid://boipgfyx6mikt" path="res://fonts/monogram-extended.ttf" id="2_1"]

[node name="LevelMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 48
text = "dream descent"
horizontal_alignment = 1

[node name="MapContainer" type="Label" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.8, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 24
text = "[map will appear here]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 1.0, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 28
text = "level 1: the surface dream"
horizontal_alignment = 1

[node name="ContinueLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("2_1")
theme_override_font_sizes/font_size = 20
text = "press any key to continue"
horizontal_alignment = 1
